# GradusRAG

./: .gitignore  README.md  README.zh.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
config/: expand_settings.yaml.example  settings.yaml.example
config/prompts/: entity_extraction.txt  (+6 more)
frontend/: app.py
results/: .gitkeep  ablation_final.json  ablation_new.json  ablation_v2.json  eval_20260607_173132.json  eval_progress_new.json  eval_progress_v2.json  expand_summary.json  experiment_summary.md  generate_summary.json  hotpotqa_50.json  hotpotqa_eval.json  lightrag_comparison.json  main_results.json  main_results_new.json  main_results_v2.json  pairwise_cn_eval.json  pairwise_eval.json  pubmedqa_50.json  pubmedqa_eval.json  rerank_tuning.json  squad_50.json  squad_eval.json
scripts/: ablation.py  annotate_testset.py  apply_review.py  build_graph.py  build_testset_v3.py  check_comparison.py  check_env.py  check_milvus.py  clear_milvus.py  compare_lightrag.py  convert_ultradomain.py  diag_classify.py  diag_pairwise.py  diagnose_batch.py  diagnose_retrieval.py  eval_public_datasets.py  expand_documents.py  generate_documents.py  generate_test_set.py  generate_ultradomain_testset_v2.py  ingest.py  query.py  regenerate_answers.py  run_all.py  run_evaluation.py  run_pairwise_eval.py  tune_rerank.py
src/: __init__.py
tests/: test_evaluation.py  test_generation.py  test_graph.py  test_hybrid_retrieval.py  test_ingestion.py  test_query_classifier.py  test_rerank_context.py  test_retrieval.py  test_retrieval_detailed.py  test_self_rag.py  test_types.py
(+80 files in other folders)
